# Skillbox_27

./: CMakeLists.txt  README.md
include/: Branch.h  Circle.h  Company.h  Employee.h  Enum_struct.h  Geometry.h  Initials.h  Square.h  Team.h  Tree.h  Triangle.h  solution.h  use_lib.h
src/: Branch.cpp  CMakeLists.txt  Circle.cpp  Circle.h  Company.cpp  Employee.cpp  Geometry.cpp  Rectangle.cpp  Rectangle.h  Square.cpp  Team.cpp  Tree.cpp  Triangle.cpp  Triangle.h  main.cpp  solution_1.cpp  solution_2.cpp  solution_3.cpp
